--- a/css/unified.css
+++ b/css/unified.css
@@ -63,8 +63,12 @@
 
 .password-label #forgotPassword {
   position: absolute;
-  bottom: -20px;
+  bottom: 6px;
   left: 0;
+}
+
+.password-label + #password {
+  margin-bottom: 40px;
 }
 
 @media only screen and (min-width: 768px) {
